--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,5 @@
 fastapi[all]
+psycopg2-binary==2.9.11
+sqlalchemy
+pydantic==2.12.4 # Validation  
+pydantic-settings==2.12.0 # Configuration Settings
