--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,10 @@
-services:
-  # A Docker web service
+services:  # A Docker web service
   - type: web
     name: fastapi-example
     runtime: python
     plan: free
     autoDeploy: false
-    buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
+    # buildCommand: pip install -r requirements.txt && cd frontend && npm install && npm run build
+    buildCommand: pip install -r requirements.txt && alembic upgrade head
+    startCommand: uvicorn test:app --host 0.0.0.0 --port $PORT
+ 
