--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ psycopg2-binary==2.9.11
 sqlalchemy
 pydantic==2.12.4 # Validation  
 pydantic-settings==2.12.0 # Configuration Settings
+alembic==1.17.2 # Migration Tool
