--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,6 @@ services:  # A Docker web service
     runtime: python
     plan: free
     autoDeploy: false
-    # buildCommand: pip install -r requirements.txt && cd frontend && npm install && npm run build
-    buildCommand: pip install -r requirements.txt && alembic upgrade head
+    buildCommand: ./build.sh
     startCommand: uvicorn test:app --host 0.0.0.0 --port $PORT
  
