--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ pydantic==2.12.4 # Validation
 pydantic-settings==2.12.0 # Configuration Settings
 alembic==1.17.2 # Migration Tool
 supabase==2.24.0
+httpx==0.28.1
