--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,6 @@ supabase==2.24.0
 httpx==0.28.1
 langchain==1.1.0 # Langchain framework
 langchain-openai==1.1.0 # Langchain Open AI interface
+
+langchain-qdrant==1.1.0 # Langchain with Qdrant vector DB
+pypdf==6.4.0 # PDF to Text
