--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,5 @@ langchain-openai==1.1.0 # Langchain Open AI interface
 
 langchain-qdrant==1.1.0 # Langchain with Qdrant vector DB
 pypdf==6.4.0 # PDF to Text
+
+pandas==2.3.3
